load("@com_google_protobuf//:protobuf.bzl", "cc_proto_library")
load("//bazel:zkx_cc.bzl", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

cc_proto_library(
    name = "buffer_assignment_proto",
    srcs = ["buffer_assignment.proto"],
)

cc_proto_library(
    name = "hlo_proto",
    srcs = ["hlo.proto"],
    deps = [
        ":metrics_proto",
        "//zkx:zkx_data_proto",
        "@com_google_protobuf//:cc_wkt_protos",
    ],
)

cc_proto_library(
    name = "metrics_proto",
    srcs = ["metrics.proto"],
)

cc_proto_library(
    name = "test_compilation_environment_proto",
    testonly = True,
    srcs = ["test_compilation_environment.proto"],
)

zkx_cc_library(
    name = "buffer_assignment",
    srcs = ["buffer_assignment.cc"],
    hdrs = ["buffer_assignment.h"],
    deps = [
        ":buffer_assignment_proto",
        ":hlo_buffer",
        ":hlo_value",
        ":logical_buffer",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:numbers",
        "//zkx:map_util",
        "//zkx/base:logging",
        "//zkx/hlo/analysis:hlo_alias_analysis",
        "//zkx/hlo/analysis:hlo_dataflow_analysis",
        "//zkx/hlo/analysis:hlo_ordering",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_op_metadata",
        "//zkx/service/memory_space_assignment",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "buffer_value",
    srcs = ["buffer_value.cc"],
    hdrs = ["buffer_value.h"],
    deps = [
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
    ],
)

zkx_cc_library(
    name = "call_graph",
    srcs = ["call_graph.cc"],
    hdrs = ["call_graph.h"],
    deps = [
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "computation_layout",
    srcs = ["computation_layout.cc"],
    hdrs = ["computation_layout.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//zkx:shape_layout",
        "//zkx:shape_util",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "collective_ops_utils",
    srcs = ["collective_ops_utils.cc"],
    hdrs = ["collective_ops_utils.h"],
    deps = [
        ":computation_placer",
        ":global_device_id",
        ":pattern_matcher",
        "//xla/tsl/platform:statusor",
        "//zkx:executable_run_options",
        "//zkx:status_macros",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "compilation_environments",
    srcs = ["compilation_environments.cc"],
    hdrs = ["compilation_environments.h"],
    deps = [
        "//xla/tsl/platform:casts",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:status",
        "//xla/tsl/platform:statusor",
        "//zkx:zkx_proto",
        "//zkx/base:logging",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "compiler",
    srcs = ["compiler.cc"],
    hdrs = ["compiler.h"],
    deps = [
        "//zkx/stream_executor:platform",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "computation_placer",
    srcs = ["computation_placer.cc"],
    hdrs = ["computation_placer.h"],
    deps = [
        ":global_device_id",
        "//xla/tsl/platform:statusor",
        "//zkx:array2d",
        "//zkx:status_macros",
        "//zkx:zkx_data_proto",
        "//zkx/base:logging",
        "//zkx/stream_executor:platform",
        "//zkx/stream_executor/host:host_platform_id",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "custom_call_status",
    srcs = [
        "custom_call_status.cc",
        "custom_call_status_internal.h",
    ],
    hdrs = ["custom_call_status.h"],
)

zkx_cc_library(
    name = "elemental_ir_emitter",
    srcs = ["elemental_ir_emitter.cc"],
    hdrs = ["elemental_ir_emitter.h"],
    deps = [
        "//xla/tsl/platform:statusor",
        "//zkx/codegen:emitter_loc_op_builder",
        "//zkx/hlo/ir:hlo",
        "//zkx/service/llvm_ir:mlir_loop_emitter",
        "@com_google_absl//absl/container:flat_hash_map",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:IR",
    ],
)

zkx_cc_library(
    name = "global_device_id",
    srcs = ["global_device_id.cc"],
    hdrs = ["global_device_id.h"],
    deps = [
        "//xla/tsl/lib/gtl:int_type",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "hlo_buffer",
    srcs = ["hlo_buffer.cc"],
    hdrs = ["hlo_buffer.h"],
    deps = [
        ":buffer_value",
        ":hlo_value",
        "//zkx/base:logging",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "hlo_module_config",
    srcs = ["hlo_module_config.cc"],
    hdrs = ["hlo_module_config.h"],
    deps = [
        ":computation_layout",
        ":computation_placer",
        ":sharding_config",
        "//zkx:shape_util",
        "//zkx:zkx_proto",
        "//zkx/base:logging",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "hlo_value",
    srcs = ["hlo_value.cc"],
    hdrs = ["hlo_value.h"],
    deps = [
        ":buffer_value",
        "//zkx:lazy",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "logical_buffer",
    srcs = ["logical_buffer.cc"],
    hdrs = ["logical_buffer.h"],
    deps = [
        ":buffer_value",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "mapped_ptr_container_sorter",
    hdrs = ["mapped_ptr_container_sorter.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx/base:logging",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/functional:bind_front",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "maybe_owning_device_memory",
    srcs = ["maybe_owning_device_memory.cc"],
    hdrs = ["maybe_owning_device_memory.h"],
    deps = [
        "//zkx/stream_executor:device_memory",
        "//zkx/stream_executor:device_memory_allocator",
        "//zkx/stream_executor:namespace_alias",
    ],
)

zkx_cc_library(
    name = "name_uniquer",
    srcs = ["name_uniquer.cc"],
    hdrs = ["name_uniquer.h"],
    deps = [
        "//zkx:primitive_util",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "pattern_matcher",
    hdrs = ["pattern_matcher.h"],
    deps = [
        "//zkx:comparison_util",
        "//zkx:literal",
        "//zkx:shape_util",
        "//zkx:util",
        "//zkx:zkx_data_proto",
        "//zkx/base:logging",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/parser:hlo_parser",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_absl//absl/utility",
    ],
)

zkx_cc_library(
    name = "phi_graph",
    srcs = ["phi_graph.cc"],
    hdrs = ["phi_graph.h"],
    deps = [
        ":hlo_value",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "platform_util",
    srcs = ["platform_util.cc"],
    hdrs = ["platform_util.h"],
    deps = [
        ":compiler",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx/base:logging",
        "//zkx/stream_executor:platform",
        "//zkx/stream_executor:platform_manager",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "rendezvous",
    srcs = ["rendezvous.cc"],
    hdrs = ["rendezvous.h"],
    deps = [
        "//zkx/base:logging",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "shape_inference",
    srcs = ["shape_inference.cc"],
    hdrs = ["shape_inference.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:status",
        "//zkx:shape_util",
        "//zkx:zkx_data_proto",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "shaped_buffer",
    srcs = ["shaped_buffer.cc"],
    hdrs = ["shaped_buffer.h"],
    deps = [
        "//xla/tsl/platform:status",
        "//xla/tsl/platform:statusor",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx/stream_executor:device_memory",
        "//zkx/stream_executor:device_memory_allocator",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "sharding_config",
    srcs = ["sharding_config.cc"],
    hdrs = ["sharding_config.h"],
    deps = [
        "//zkx:zkx_proto",
        "//zkx/hlo/ir:hlo_sharding",
    ],
)

zkx_cc_library(
    name = "time_utils",
    hdrs = ["time_utils.h"],
)

zkx_cc_library(
    name = "tuple_util",
    srcs = ["tuple_util.cc"],
    hdrs = ["tuple_util.h"],
    deps = [
        ":hlo_value",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_unittest(
    name = "service_unittests",
    srcs = [
        # TODO(chokobole): Add unittest. Dependency: HloTestBase
        # "call_graph_unittest.cc",
        "compilation_environments_unittest.cc",
        "custom_call_status_test_c_caller.c",
        "custom_call_status_test_c_caller.h",
        # TODO(chokobole): Add unittest. Dependency: HloTestBase
        # "elemental_ir_emitter_unittest.cc"
        "hlo_module_config_unittest.cc",
        "mapped_ptr_container_sorter_unittest.cc",
        "name_uniquer_unittest.cc",
        # TODO(chokobole): Add unittest. Dependency: HloTestBase
        # "pattern_matcher_unittest.cc",
        "phi_graph_unittest.cc",
        "rendezvous_unittest.cc",
        "shape_inference_unittest.cc",
        "sharding_config_unittest.cc",
        # TODO(chokobole): Add unittest. Dependency: PlatformUtil::GetStreamExecutors
        # "shaped_buffer_unittest.cc",
    ],
    deps = [
        ":compilation_environments",
        ":custom_call_status",
        ":hlo_module_config",
        ":mapped_ptr_container_sorter",
        ":name_uniquer",
        ":phi_graph",
        ":rendezvous",
        ":shape_inference",
        ":sharding_config",
        ":test_compilation_environment_proto",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:statusor",
        "//zkx:literal_util",
        "//zkx/hlo/parser:hlo_parser",
        "//zkx/tests:test_utils",
        "@com_google_absl//absl/synchronization",
    ],
)
